# TODO-APP-FASTAPI

./: .env  .gitignore
auth-server/: Dockerfile.dev  pyproject.toml
auth-server/app/: crud.py  main.py  models.py  service.py
auth-server/app/core/: config_db.py  settings.py  utils.py
auth-server/tests/: test_main.py
todo-server/: pyproject.toml
